--- a/240314/cyworld.html
+++ b/240314/cyworld.html
@@ -19,7 +19,7 @@
             <div class="wrapper_left_header">
               <div class="today">
                 <span>TODAY</span>
-                <span class="zero">0</span>
+                <span class="zero">525</span>
                 <span>| TOTAL</span>
                 <span>12345</span>
               </div>
@@ -72,12 +72,16 @@
             <div class="wrapper_right_body">
               <iframe
                 id="contentFrame"
-                src="./game.html"
+                src="./home.html"
                 frameborder="0"
               ></iframe>
             </div>
           </div>
-          <div class="navigation"></div>
+          <div class="navigation">
+            <div id="home" class="navi-item">Home</div>
+            <div id="game" class="navi-item">Game</div>
+            <div id="music" class="navi-item">JUKEBOX</div>
+          </div>
         </div>
       </div>
     </div>
