--- a/240314/game.html
+++ b/240314/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./game.css" />
+    <script type="module" defer src="./game.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -37,7 +38,7 @@
               <input class="search" type="submit" value="입력" />
             </form>
           </div>
-          <div id="result" class="word_result">성공!</div>
+          <div id="result" class="word_result"></div>
         </div>
         <div class="wrapper_body">
           <img src="./contents/lotto.png" alt="wordGame" />
