--- a/Header_S/index.html
+++ b/Header_S/index.html
@@ -335,7 +335,7 @@
             </div>
           </div>
           <div class="common-responsibility-store-top-menu">
-            <a href=""><span>온라인</span></a>
+            <a href=""><span class="active">온라인</span></a>
             <a href=""><span>오프라인</span></a>
           </div>
           <div class="common-responsibility-foundation-top-menu">
