--- a/240315/index01.html
+++ b/240315/index01.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuidv4.min.js"
+    ></script>
     <title>Document</title>
     <link rel="stylesheet" href="./style01.css" />
     <script defer src="./script01.js"></script>
@@ -24,11 +29,11 @@
         </div>
         <div class="block">
           <h2>👀Doing👀</h2>
-          <div id="todo" class="list"></div>
+          <div id="doing" class="list"></div>
         </div>
         <div class="block">
           <h2>🤘Done🤘</h2>
-          <div id="todo" class="list"></div>
+          <div id="done" class="list"></div>
         </div>
       </div>
     </div>
