--- a/Product_S/proudct.html
+++ b/Product_S/proudct.html
@@ -1016,11 +1016,11 @@
       </div>
     </div>
     <div class="product-wrap">
-      <ul class="pro-silder-img">
+      <ul class="pro-slider-img">
         <li>
-          <img src="./product_img/img-categoty-new2.jpg" alt="" />
+          <img src="./product_img/img-categoty-new1.jpg" alt="" />
         </li>
-        <li><img src="./product_img/img-categoty-new1.jpg" alt="" /></li>
+        <li><img src="./product_img/img-categoty-new2.jpg" alt="" /></li>
         <li><img src="./product_img/img-categoty-new3.jpg" alt="" /></li>
       </ul>
       <div class="pro-section">
@@ -1036,7 +1036,7 @@
             <a href="">카테고리</a>
           </span>
           <div class="pro-array-menu">
-            <span class="pro-total">총 30개</span>
+            <span class="pro-total"></span>
             <span class="pro-array-select">
               <a href="">
                 <i class="fa-solid fa-list"></i>
