--- a/product_inner/productD.html
+++ b/product_inner/productD.html
@@ -134,15 +134,128 @@
               <div class="proD-buy-button">구매 하러 가기</div>
             </div>
           </div>
-
           <div class="proD-sticky-bar">
-            <span>상세 페이지</span>
+            <span class="active">상세 페이지</span>
             <span>진성분·상품 정보</span>
             <span>추천 제품</span>
           </div>
+          <div class="proD-img-content">
+            <div class="proD-img-content-wrap">
+              <img src="./content_img/wh_Blusher_01.jpg" alt="" />
+              <img src="./content_img/wh_hooka.gif" alt="" />
+              <img src="./content_img/wh_Blusher_02.jpg" alt="" />
+              <img src="./content_img/wh_Blusher_04.gif" alt="" />
+              <img src="./content_img/wh_Blusher_05.jpg" alt="" />
+              <img src="./content_img/wh_Blusher_06.gif" alt="" />
+              <img src="./content_img/wh_Blusher_07.jpg" alt="" />
+              <img src="./content_img/wh_Blusher_08.jpg" alt="" />
+              <img src="./content_img/wh_Blusher_09.jpg" alt="" />
+              <img src="./content_img/wh_Blusher_10.jpg" alt="" />
+            </div>
+          </div>
+
           <div class="proD-product-detail">
-            <div class="proD-detail-img"></div>
-            <div class="proD-detail-info"></div>
+            <div class="proD-product-detail-title">
+              <h4>전성분/상품정보제공고시</h4>
+              <p>
+                본 상품정보는 공정거래위원회의 「전자상거래 등에서의
+                상품정보제공 고시」에 따라 작성되었습니다.
+              </p>
+            </div>
+            <table class="proD-detail-info">
+              <tbody>
+                <tr>
+                  <th>제품명</th>
+                  <td>(휘핑클라우드)휘핑 벨벳 블러셔</td>
+                </tr>
+                <tr>
+                  <th>용량</th>
+                  <td>7g</td>
+                </tr>
+                <tr>
+                  <th>제품 주요 사양· 피부타입 · 색상 등</th>
+                  <td>모든 피부용</td>
+                </tr>
+                <tr>
+                  <th>사용기한</th>
+                  <td>
+                    상품 발송일 기준으로 사용기한이 12개월 이상 남은 상품만을
+                    판매
+                  </td>
+                </tr>
+                <tr>
+                  <th>사용방법</th>
+                  <td>
+                    "내장된 퍼프를 사용하여 내용물을 묻힌 뒤, 양 볼에 톡톡
+                    두드려 줍니다. "
+                  </td>
+                </tr>
+                <tr>
+                  <th>제조사 및 책임판매업자</th>
+                  <td>인터코스 / 에뛰드</td>
+                </tr>
+                <tr>
+                  <th>제조국</th>
+                  <td>한국</td>
+                </tr>
+                <tr>
+                  <th>전성분</th>
+                  <td>
+                    <p>
+                      #멜론크림슈<br />
+                      마이카, 다이페닐실록시페닐트라이메티콘, 다이메티콘,
+                      다이아이소스테아릴말레이트,
+                      하이드로제네이티드폴리(C6-14올레핀), 티타늄디옥사이드 (CI
+                      77891), 라우로일라이신, 실리카,
+                      다이메티콘/비닐다이메티콘크로스폴리머,
+                      마그네슘미리스테이트, 황색4호, 에틸헥실글리세린,
+                      알루미늄하이드록사이드, 카프릴릴글라이콜, 적색226호,
+                      메티콘, 황색5호, 적색산화철, 토코페롤
+                    </p>
+                    <p>
+                      #베리크림슈<br />
+                      마이카, 다이페닐실록시페닐트라이메티콘, 다이메티콘,
+                      다이아이소스테아릴말레이트,
+                      하이드로제네이티드폴리(C6-14올레핀), 티타늄디옥사이드 (CI
+                      77891), 라우로일라이신, 실리카,
+                      다이메티콘/비닐다이메티콘크로스폴리머,
+                      마그네슘미리스테이트, 에틸헥실글리세린, 적색226호,
+                      알루미늄하이드록사이드, 황색산화철, 카프릴릴글라이콜,
+                      메티콘, 울트라마린, 적색산화철, 흑색산화철, 토코페롤
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>화장품법에 따른 기능성 화장품 심사를 필함</th>
+                  <td>해당사항없음</td>
+                </tr>
+                <tr>
+                  <th>사용할 때의 주의사항</th>
+                  <td>
+                    <p>
+                      1) 화장품 사용 시 또는 사용 후 직사광선에 의하여
+                      사용부위가 붉은 반점, 부어오름 또는 가려움증 등의 이상
+                      증상이나 부작용이 있는 경우 전문의 등과 상담할 것<br />
+                      2) 상처가 있는 부위 등에는 사용을 자제할 것<br />
+                      3) 보관 및 취급 시의 주의사항<br />
+                      가) 어린이의 손이 닿지 않는 곳에 보관할 것<br />
+                      나) 직사광선을 피해서 보관할 것
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>품질 보증 기준</th>
+                  <td>
+                    본 상품에 이상이 있을 경우 공정거래위원회 고시
+                    「소비자분쟁해결기준」에 따라 보상해드립니다.
+                  </td>
+                </tr>
+                <tr>
+                  <th>소비자 상담 관련 전화번호</th>
+                  <td>고객상담실 1544-5418</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
