--- a/product_inner/productD.html
+++ b/product_inner/productD.html
@@ -66,8 +66,12 @@
             <img src="./content_img/whipping_06-70x70.jpg" alt="" />
           </div>
           <div class="proD-image-button">
-            <span><i class="fa-solid fa-chevron-right"></i></span>
-            <span><i class="fa-solid fa-chevron-right"></i></span>
+            <span class="proD-backBtn"
+              ><i class="fa-solid fa-chevron-right"></i
+            ></span>
+            <span class="proD-nextBtn"
+              ><i class="fa-solid fa-chevron-right"></i
+            ></span>
           </div>
           <div class="proD-progress">
             <div class="proD-bar"></div>
@@ -139,18 +143,20 @@
             <span>진성분·상품 정보</span>
             <span>추천 제품</span>
           </div>
-          <div class="proD-img-content">
-            <div class="proD-img-content-wrap">
-              <img src="./content_img/wh_Blusher_01.jpg" alt="" />
-              <img src="./content_img/wh_hooka.gif" alt="" />
-              <img src="./content_img/wh_Blusher_02.jpg" alt="" />
-              <img src="./content_img/wh_Blusher_04.gif" alt="" />
-              <img src="./content_img/wh_Blusher_05.jpg" alt="" />
-              <img src="./content_img/wh_Blusher_06.gif" alt="" />
-              <img src="./content_img/wh_Blusher_07.jpg" alt="" />
-              <img src="./content_img/wh_Blusher_08.jpg" alt="" />
-              <img src="./content_img/wh_Blusher_09.jpg" alt="" />
-              <img src="./content_img/wh_Blusher_10.jpg" alt="" />
+          <div class="proD-img-wrap">
+            <div class="proD-img-content">
+              <div class="proD-img-content-wrap">
+                <img src="./content_img/wh_Blusher_01.jpg" alt="" />
+                <img src="./content_img/wh_hooka.gif" alt="" />
+                <img src="./content_img/wh_Blusher_02.jpg" alt="" />
+                <img src="./content_img/wh_Blusher_04.gif" alt="" />
+                <img src="./content_img/wh_Blusher_05.jpg" alt="" />
+                <img src="./content_img/wh_Blusher_06.gif" alt="" />
+                <img src="./content_img/wh_Blusher_07.jpg" alt="" />
+                <img src="./content_img/wh_Blusher_08.jpg" alt="" />
+                <img src="./content_img/wh_Blusher_09.jpg" alt="" />
+                <img src="./content_img/wh_Blusher_10.jpg" alt="" />
+              </div>
             </div>
           </div>
 
@@ -261,8 +267,20 @@
       </div>
       <div class="proD-bottom-section">
         <div class="proD-youlike">YOU MIGHT ALSO LIKE</div>
-        <div class="proD-youlike-wrap">
-          <div class="proD-youlike-imgBox">
+        <ul class="proD-youlike-wrap">
+          <li class="proD-youlike-imgBox">
+            <a class="random-imgBox-img" href="">
+              <img
+                src="./content_img/0267-MODI_TOP_COAT-1-430x430.jpg"
+                alt=""
+              />
+            </a>
+            <div class="random-imgBox-text">
+              <a class="random-imgBox-tit" href="">파워래쉬 속눈썹 영양제 6g</a>
+              <span class="random-imgBox-price">23,000원</span>
+            </div>
+          </li>
+          <li class="proD-youlike-imgBox">
             <a class="random-imgBox-img" href="">
               <img
                 src="./content_img/0267-MODI_TOP_COAT-1-430x430.jpg"
@@ -273,8 +291,44 @@
               <a class="random-imgBox-tit" href=""></a>
               <span class="random-imgBox-price"></span>
             </div>
-          </div>
-        </div>
+          </li>
+          <li class="proD-youlike-imgBox">
+            <a class="random-imgBox-img" href="">
+              <img
+                src="./content_img/0267-MODI_TOP_COAT-1-430x430.jpg"
+                alt=""
+              />
+            </a>
+            <div class="random-imgBox-text">
+              <a class="random-imgBox-tit" href=""></a>
+              <span class="random-imgBox-price"></span>
+            </div>
+          </li>
+          <li class="proD-youlike-imgBox">
+            <a class="random-imgBox-img" href="">
+              <img
+                src="./content_img/0267-MODI_TOP_COAT-1-430x430.jpg"
+                alt=""
+              />
+            </a>
+            <div class="random-imgBox-text">
+              <a class="random-imgBox-tit" href=""></a>
+              <span class="random-imgBox-price"></span>
+            </div>
+          </li>
+          <li class="proD-youlike-imgBox">
+            <a class="random-imgBox-img" href="">
+              <img
+                src="./content_img/0267-MODI_TOP_COAT-1-430x430.jpg"
+                alt=""
+              />
+            </a>
+            <div class="random-imgBox-text">
+              <a class="random-imgBox-tit" href=""></a>
+              <span class="random-imgBox-price"></span>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
