--- a/javascript/index.html
+++ b/javascript/index.html
@@ -145,7 +145,7 @@
           </span>
         </nav>
       </header>
-      <div class="content">
+      <div class="content-slide">
         <div class="slide">
           <ul>
             <div class="slide-btn">
@@ -248,13 +248,175 @@
                 alt=""
               />
             </li>
+            <div class="current-page">
+              <span>2</span>
+              <span>|</span>
+              <span>9</span>
+            </div>
           </ul>
-          <div class="current-page">
-            <span></span>
-            <span></span>
-            <span>9</span>
+        </div>
+      </div>
+      <div class="content-info">
+        <ul class="info-inner">
+          <li>
+            <a href="#"><img src="./image/icon-quick1.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./image/icon-quick2.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./image/icon-quick3.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./image/icon-quick4.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./image/icon-quick5.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./image/icon-quick6.svg" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+      <div class="content-pick">
+        <div class="pick-wrap">
+          <div class="pick-tit">메가 PICK</div>
+          <ul class="pick-submenu">
+            <li><a href="#">#일타강사Pick</a></li>
+            <li><a href="#">#탄탄한초등기본기</a></li>
+            <li><a href="#">#학원쌤의선택</a></li>
+            <li><a href="#">#중등내신대비</a></li>
+            <li><a href="#">#수능영어는ALLTIME조정식</a></li>
+            <li><a href="#">#서울대선배들의공부법</a></li>
+          </ul>
+          <div class="pick-slide">
+            <div class="pick-book">
+              <div class="book-item">
+                <div class="book-bg">
+                  <img src="./image/600x800_231113151613438.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg">
+                  <img src="./image/550x800_231113115816604.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">백신 과학 중등 1-1</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg">
+                  <img src="./image/600x800_231113152547275.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">기출정식 고1 영어</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg">
+                  <img src="./image/600x800_231114094202791.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">
+                  메가스터디 중학 국어 독해 비문학 사회 개념
+                </div>
+              </div>
+            </div>
+            <div class="pick-book">
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+            </div>
+            <div class="pick-book">
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+              <div class="book-item">
+                <div class="book-bg"><img src="" alt="" /></div>
+                <div class="book-tit">괜찮아 어법</div>
+              </div>
+            </div>
+          </div>
+          <div class="bar-button">
+            <div class="bar">
+              <div class="bar-inner"></div>
+            </div>
+            <div class="btn">
+              <span class="left"
+                ><svg
+                  width="36"
+                  height="36"
+                  viewBox="0 0 36 36"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M22.4551 17.9375L13.5043 8.9867"
+                    stroke="current"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M22.4551 18.0234L13.5043 26.9742"
+                    stroke="current"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
+              <span class="right">
+                <svg
+                  width="36"
+                  height="36"
+                  viewBox="0 0 36 36"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M22.4551 17.9375L13.5043 8.9867"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M22.4551 18.0234L13.5043 26.9742"
+                    stroke="#111111"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </span>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="content-test">
+        <img
+          src="./image/_EB_A9_94_EC_9D_B8_EC_A4_91_EA_B0_84_EB_B0_B0_EB_84_881440x220_231117173517301.png"
+          alt=""
+        />
       </div>
     </div>
   </body>
