--- a/javascript/Slide_Project/index.html
+++ b/javascript/Slide_Project/index.html
@@ -65,6 +65,11 @@
           />
         </li>
       </ul>
+      <div class="pageNum">
+        <span id="currentNum"></span>
+        <span>|</span>
+        <span id="lastNum"></span>
+      </div>
     </div>
     <p class="controls">
       <span class="prev"><i class="fa-solid fa-caret-left"></i></span>
