--- a/javascript/touch-slide/index.html
+++ b/javascript/touch-slide/index.html
@@ -1,23 +1,68 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script defer src="./script.js"></script>
+    <title>Touch Scroll</title>
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
-    <div class="wrapper">
-      <ul>
-        <li><img src="./TVING/LTNS 이미지.jpg" alt="" /></li>
-        <li><img src="./TVING/눈물의 여왕 포스터.jpg" alt="" /></li>
-        <li><img src="./TVING/선재 업고 튀어 포스터.jpg" alt="" /></li>
-        <li><img src="./TVING/웨딩 임파서블 포스터.jpg" alt="" /></li>
-        <li><img src="./TVING/유 퀴즈 온 더 블럭 포스터.jpg" alt="" /></li>
-        <li><img src="./TVING/커플팰리스 포스터.jpg" alt="" /></li>
-        <li><img src="./TVING/환승연애3 이미지.jpg" alt="" /></li>
-      </ul>
-    </div>
+    <ul class="list">
+      <li class="item">
+        <a class="link" href="#">
+          <img
+            class="image"
+            src="./TVING/LTNS 이미지.jpg"
+            alt="첫 번째 별나비"
+          />
+        </a>
+      </li>
+      <li class="item">
+        <a class="link" href="#">
+          <img
+            class="image"
+            src="./TVING/눈물의 여왕 포스터.jpg"
+            alt="두 번째 별나비"
+          />
+        </a>
+      </li>
+      <li class="item">
+        <a class="link" href="#">
+          <img
+            class="image"
+            src="./TVING/웨딩 임파서블 포스터.jpg"
+            alt="세 번째 별나비"
+          />
+        </a>
+      </li>
+      <li class="item">
+        <a class="link" href="#">
+          <img
+            class="image"
+            src="./TVING/유 퀴즈 온 더 블럭 포스터.jpg"
+            alt="네 번째 별나비"
+          />
+        </a>
+      </li>
+      <li class="item">
+        <a class="link" href="#">
+          <img
+            class="image"
+            src="./TVING/선재 업고 튀어 포스터.jpg"
+            alt="다섯 번째 별나비"
+          />
+        </a>
+      </li>
+      <li class="item">
+        <a class="link" href="#">
+          <img
+            class="image"
+            src="./TVING/환승연애3 이미지.jpg"
+            alt="여섯 번째 별나비"
+          />
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
