--- a/javascript/mega/index.html
+++ b/javascript/mega/index.html
@@ -324,38 +324,82 @@
             </div>
             <div class="pick-book">
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img
+                    src="./image/_ED_91_9C1__EA_B0_9C_EB_85_90_EC_97_94_20_EC_9C_A0_ED_98_95_ED_95_99_EC_8A_B5_201-1_231114192343377.jpg"
+                    alt=""
+                  />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">
+                  엠베스트 민정범 개념엔 유형학습 중학수학 1-1
+                </div>
               </div>
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img
+                    src="./image/_ED_95_9C_EB_AC_B8_EC_A0_95_EC_A0_95_EB_A6_AC_EC_9D_98_ED_9E_98_1_EA_B6_8C__ED_91_9C1_231113155244541.jpg"
+                    alt=""
+                  />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">
+                  초등 문해력 한 문장 정리의 힘 기본편 1권
+                </div>
               </div>
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img src="./image/600x800_231114171700828.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">
+                  메가스터디 N제 과학탐구영역 지구과학1 285제
+                </div>
               </div>
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img
+                    src="./image/600x800_1_EA_B6_8C_231110152642537.jpg"
+                    alt=""
+                  />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">뭔말 과학 용어 200 1권</div>
               </div>
             </div>
             <div class="pick-book">
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img
+                    src="./image/600x800_1_EA_B6_8C_231113093521503.jpg"
+                    alt=""
+                  />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">뭔말 국어 용어 200 1권</div>
               </div>
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img src="./image/600x800_231113095445787.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">뭔말 역사 용어 150</div>
               </div>
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img src="./image/600x800_01_231114112433716.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">
+                  메가스터디 중학 국어 문학 필수개념 독해 연습 1권
+                </div>
               </div>
               <div class="book-item">
-                <div class="book-bg"><img src="" alt="" /></div>
-                <div class="book-tit">괜찮아 어법</div>
+                <div class="book-bg">
+                  <img src="./image/550x800_231113180041391.jpg" alt="" />
+                  <div id="book-tit-hover"></div>
+                </div>
+                <div class="book-tit">백신 통합과학(너의 만점을 위한 바람)</div>
               </div>
             </div>
           </div>
@@ -417,6 +461,154 @@
           src="./image/_EB_A9_94_EC_9D_B8_EC_A4_91_EA_B0_84_EB_B0_B0_EB_84_881440x220_231117173517301.png"
           alt=""
         />
+      </div>
+      <div class="content-bestseller">
+        <div class="title">
+          <span>베스트 셀러</span>
+          <span id="grade">
+            <span>초등</span>
+            <span>중등</span>
+            <span>고등</span>
+            <span>단행본</span>
+          </span>
+        </div>
+        <div class="slide-wrap">
+          <div class="bg"></div>
+          <div class="item low">
+            <div class="slide-item">
+              <img src="./image/XL_231218121029501.jpg" alt="" />
+              <h2>이서윤쌤의 초등 한자 어휘 끝내기 1단계</h2>
+            </div>
+            <div class="slide-item">
+              <img src="./image/600x800_231113132408511.png" alt="" />
+              <h2>이서윤쌤의 초등한자어휘 일력</h2>
+            </div>
+            <div class="slide-item">
+              <img src="./image/레벨1_표1_231227165809845.jpg" alt="" />
+              <h2>초등영문법 문장의 원리 Level 1</h2>
+            </div>
+            <div class="slide-item">
+              <img
+                src="./image/600x800_2_EA_B6_8C_231113094316587.jpg"
+                alt=""
+              />
+              <h2>뭔말 국어 용어 200 2권</h2>
+            </div>
+            <div class="slide-item">
+              <img
+                src="./image/600x800_2_EA_B6_8C_231110153429381.jpg"
+                alt=""
+              />
+              <h2>뭔말 과학 용어 200 2권</h2>
+            </div>
+            <div class="slide-item">
+              <img src="./image/595x800_231117094745998.jpg" alt="" />
+              <h2>스도쿠로 익히는 초등 필수 고사성어 100</h2>
+            </div>
+            <div class="slide-item">
+              <img src="./image/550x800_02_231114153946164.jpg" alt="" />
+              <h2>1일 1독해 우리 고전 50 2권 교과서 고전문학</h2>
+            </div>
+            <div class="slide-item">
+              <img src="./image/550x800_01_231114141954867.jpg" alt="" />
+              <h2>1일 1독해 세상을 바꾼 인물 100 1권 문화·예술</h2>
+            </div>
+            <div class="slide-item">
+              <img src="./image/550x800_231113101115729.jpg" alt="" />
+              <h2>용돈 잘 쓰는 법</h2>
+            </div>
+          </div>
+          <div class="item middle">
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+          </div>
+          <div class="item high">
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+          </div>
+          <div class="item special">
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+            <div class="slide-item">
+              <img src="" alt="" />
+              <h2></h2>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
